--- a/Guia0Archivos1/Guia0Archivos1.csproj
+++ b/Guia0Archivos1/Guia0Archivos1.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BE64D54C-A274-4E20-9069-DEDDF01E4D8D}</ProjectGuid>
+    <ProjectGuid>{DE713060-E4A8-412B-A232-AEC920C48B95}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Guia0ColasFilas1</RootNamespace>
-    <AssemblyName>Guia0ColasFilas1</AssemblyName>
+    <RootNamespace>Guia0Archivos1</RootNamespace>
+    <AssemblyName>Guia0Archivos1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Caja.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
