--- a/Guia0Integracion3/Guia0Integracion3.csproj
+++ b/Guia0Integracion3/Guia0Integracion3.csproj
@@ -48,11 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ListaDeTecnicos.cs" />
+    <Compile Include="Cliente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solicitud.cs" />
     <Compile Include="Tecnicos.cs" />
-    <Compile Include="Ticket.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
